# trading-bot

./: .gitignore  DELIVERY.md  DEVELOPMENT.md  INDEX.md  LICENSE  QUICKSTART.md  README.md  SETUP_GUIDE.md  bonus_orders.py  cli.py  example.py  pyproject.toml  validate.py
bot/: client.py  logging_config.py  orders.py  validators.py
